--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -23,7 +23,7 @@
     span {
         font-size: 18px;
         font-family: 'Viaoda Libre', serif;
-        margin: 2% 0 -8% 30%;
+        margin: 2% 0 -10% 38%;
     }
 
     p {
@@ -44,6 +44,14 @@
             font-size: 20px;
         }
     }
+}
+
+.stack {
+    transition: 0.3s ease-in-out;
+}
+
+.stack:hover {
+    transform: translateY(-5%);
 }
 
 .about {
